Add @Transactional and equipment features
Game service: add @Transactional(readOnly=true) at controller level and method-level @Transactional for mutating endpoints in AnswerController, QuestionController and QuizController; annotate IQuizServiceImp.getWeakTopicsByCaregiver with @Transactional(readOnly=true) and harden its logic with null checks, logging and proper collection.

Medical service: add springdoc-openapi dependency to pom and minor YAML newline fix.

User service: add H2 dependency to pom, add a local H2 profile to application.yml (keep prod default), and improve UserController error handling with try/catch and informative 500 responses.

Frontend: add extensive equipment-management.component.html (new equipment UI), extend EquipmentService with multiple endpoints (filter by category/status, donated-after, counts, overdue, loans due-between, borrower/status, check/update overdue), and other patient-dashboard tweaks; add frontend build.log capturing build output/errors.

Misc: tiny formatting/newline fixes in EquipmentController and other resources. These changes enable transactional safety in game controllers, add API/docs support, local DB profile for testing, and a new equipment management UI + supporting client methods.